fixing some layout issues in mobile view

--- a/src/app/book-detail/book-detail.component.css
+++ b/src/app/book-detail/book-detail.component.css
@@ -1,4 +1,8 @@
 /* BookDetailComponent's private CSS styles */
+.bookDetailsCard {
+  padding: 30px;
+}
+
 label {
   display: inline-block;
   width: 3em;
